# KommatiPara1

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
client_data/dataset_one.csv/: part-00000-59efa359-9d69-488e-ba10-88250157fc7c-c000.csv
logs/: current_log.log.2024-09-13_13-56  current_log.log.2024-09-13_14-21
src/: log_manager.py  main.py
src/client_data/output.csv/: .part-00000-5f3fc12a-2ac9-41d5-9b8b-9d5db64ffce3-c000.csv.crc
src/utils/: analyser.py  log_manager.py
tests/: test_analyser.py
